@@ -1,9 +1,9 @@
 #EXTRA_DIST=README
 
-dbioplugindir=@gwenhywfar_plugins@/dbio
+dbioplugindir = $(gwenhywfar_plugindir)/dbio
 
 localedir=$(datadir)/locale
-DEFS=-DLOCALEDIR=\"$(localedir)\" @DEFS@
+DEFS += -DLOCALEDIR=\"$(localedir)\"
 
 dbioplugin_LTLIBRARIES=olddb.la
 dbioplugin_DATA=olddb.xml
@@ -11,5 +11,5 @@ noinst_HEADERS=olddb_p.h
 
 olddb_la_SOURCES=olddb.c
 olddb_la_LIBADD=-L$(top_builddir)/src -lgwenhywfar
-olddb_la_LDFLAGS=@STRIPALL@ -module -version-info 0:1:0
+olddb_la_LDFLAGS = $(STRIPALL) -module -version-info 0:1:0
 
