@@ -1,7 +1,7 @@
 INCLUDES=@all_includes@
 
 if USE_NCURSES
-libsui = -lgwenui
+libsui = $(gwenhywfar_libsui)
 else
 libsui =
 endif
@@ -9,7 +9,7 @@ endif
 noinst_PROGRAMS=gwentest
 gwentest_SOURCES=gwentest.c
 gwentest_LDADD=\
-  -L/mingw/lib -L$(top_builddir)/src @gwenhywfar_lib@ \
+  -L/mingw/lib -L$(top_builddir)/src $(gwenhywfar_libs) \
   -L$(top_builddir)/gwenui $(libsui)
 
 EXTRA_DIST = README.MSVC gwentest.vcproj
